# YVGstExcercise

./: README  README.md
gst-template/gst-plugin/src/: Makefile.am  gstmyplugin.c  gstmyplugin.h
gstPlugin/: Makefile.am  gstmyfilter.c  gstmyfilter.h
simplegstapp/: ReadMe.txt
vcuDemo_gstApp/: Makefile  README.md  gstapp.c
xlnx_example/encoding/: Makefile  build.sh  lab2a_capture_encode_mux_filedump  main.c  settings.sh
xlnx_example/video_lib/: common.h  format.h  helper.h  log_events.c  log_events.h  mediactl_helper.c  mediactl_helper.h  v4l2_helper.c  v4l2_helper.h  video.c  video.h  video_int.h  video_lib.mk
